tests/src/frontend/typechecking/invalid/inherit_params_5.sk
base class Foo final {f: Int}
base class Bar{f2: Int} extends Foo
